--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Voyage & Co</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
-      <header id="entete">
-        <h1>Voyage & Co</h1>
-      </header>
-      <nav>
-        <ul>
-          <li id="nav-home"><a href="#">Accueil</a></li>
-          <li id="nav-destination"><a href="#">Destinations</li>
-          <li id="nav-reservation"><a href="#">Reservations</li>
-          <li id="nav-contact"><a href="#">Contact</li>
-          <li id="search">
-            <form class="" action="index.html" method="post">
-            <input type="text" id="Search" name="Q" >
-            <button>Recherche</button>
-          </form>
-          </li>
-        </ul>
-      </nav>
-  </body>
+<head>
+  <meta charset="utf-8"/>
+  <title>Voyage & Co</title>
+  <link rel="stylesheet" href="assets/css/style.css"/>
+</head>
+<body>
+  <header id="entete">
+    <h1>Voyage & Co</h1>
+  </header>
+  <nav id="menucolor">
+    <ul>
+      <li class="nav-home">
+        <a href="#">Accueil</a>
+      </li>
+      <li id="nav-destination">
+        <a href="#">Destinations</a>
+      </li>
+      <li id="nav-reservation">
+        <a href="#">Reservations</a>
+      </li>
+      <li id="nav-contact">
+        <a href="#">Contact</a>
+      </li>
+      <li id="search">
+        <form class="" action="index.html" method="post">
+          <input type="text" id="Search" name="Q" />
+          <button>Recherche</button>
+        </form>
+      </li>
+    </ul>
+  </nav>
+</body>
 </html>
+
+
+
+
 
 <!-- https://developer.mozilla.org/fr/docs/Web/HTML/Element/form -->
